# smart_search

./: .coverage  .coverage.f4d4889b862a.ant.amazon.com.62846.XPQCearx  .env.example  .flake8  .gitignore  2025-09-15.json  2025-09-17-02.json  2025-09-18-04.json  Dockerfile  README.md  SETUP.md  WealthTech_Smart_Search_Design.md  chat-2025-09-20-21.json  docker-compose.yml  format.sh  init.sql  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  test-requirements.txt  test_bart_summarizer.py  test_endpoints.py  test_gemini_summarizer.py  test_integration.py
.github/workflows/: test-coverage.yml  update-docs.yml
app/: database.py  main.py
app/api/: documents.py  notes.py  search.py
app/core/: config.py
app/models/: database.py
app/schemas/: schemas.py
app/services/: embedder.py  search.py  summarizer.py
app/utils/: validation.py
docs/: API.md
planning/: rough-idea.md  summary.md
planning/implementation/: plan.md  pre-step7-analysis.md  technical-learnings.md
planning/implementation/api-container/: context.md  progress.md
planning/implementation/bart-summarization/: context.md  plan.md  progress.md
scripts/: update-docs.sh
src/: config.py  database.py  main.py
src/api/: documents.py  notes.py  schemas.py  search.py
src/models/: database.py
src/utils/: embedder.py  search_utils.py  summarizer.py  validation.py
tests/: clear_db.sh  manual_tests.md  requirements.txt  run_e2e_tests.sh  test_integration.py  test_unit.py
tests/data/: README.md  doc_bank_statement.txt  doc_investment_analysis.txt  doc_portfolio_report.txt  doc_tax_filing.txt  note_client_meeting.txt  note_earnings_call.txt  note_email_chain.txt  note_investment_committee.txt
(+9 files in other folders)
